--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Hello World test</title>
 </head>
 <body>
-    <h1>Hello World Latest</h1>
+    <h1>Hello World Latest: v1</h1>
 </body>
 </html>
